src/objects/inscor__Work_Order_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Analysis_Date__c</fullName>
        <label>Analysis Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Current_Margin__c</fullName>
        <formula>((inscor__Total_Invoiced__c - inscor__Total_Cost__c) / inscor__Total_Invoiced__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Estimated_Remaining_Labor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated Remaining Labor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Percent_Tasks_Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Tasks Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Scheduled_End__c</fullName>
        <label>Scheduled End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Scheduled_Start__c</fullName>
        <label>Scheduled Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Invoiced__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Labor_Invoiced__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Labor Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Labor_Reserved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Labor Reserved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Material_Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Material Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Material_Invoiced__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Material Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Material_Issued__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Material Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Misc_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Misc Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Open_Tools__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Open Tools</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Parts_Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Parts Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Parts_Due_In__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Parts Due In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Tasks_Completed__c</fullName>
        <label>Total Tasks Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Tasks_Open__c</fullName>
        <label>Total Tasks Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Turnaround_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Turnaround Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Work Order Analysis</relationshipLabel>
        <relationshipName>Work_Order_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Order Analysis</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WOA-{0000}</displayFormat>
        <label>Work Order Analysis Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>